<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:focusable="true"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
    <LinearLayout 
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/login_title"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical">
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:text="@string/db_name"/>
        <!-- <EditText 
            android:id="@+id/dbPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/db_name"/> -->
        <Spinner 
            android:id="@+id/dbSpn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_spn"
            android:textSize="16sp"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <Button 
            android:id="@+id/read"
            style="@style/btn_login"
            android:text="@string/done"/>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
